# deltalakeAWS

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
dashboard/: README.md  docker-compose.yml
dashboard/backend/: Dockerfile  requirements.txt
dashboard/backend/app/: __init__.py  main.py
dashboard/backend/app/api/routes/: config.py  cost.py  deployment.py  discovery.py  monitoring.py
dashboard/backend/app/core/: config.py
dashboard/backend/app/services/: aws_service.py
dashboard/backend/tests/: test_api.py
dashboard/frontend/: Dockerfile  index.html  package.json
dashboard/frontend/src/: App.tsx
dashboard/frontend/src/components/Layout/: Layout.tsx
dashboard/frontend/src/pages/: Dashboard.tsx  ResourceExplorer.tsx  stubs.tsx
dashboard/frontend/src/services/: api.ts
docs/: ARCHITECTURE.md  LAKE_FORMATION.md  TAGGING.md  VPC_ENDPOINTS.md
examples/: datalake-with-lakeformation.toml  datalake-with-vpc.toml  datalake.toml
src/datalake_aws/: __init__.py  __main__.py  cli.py  config.py  cost.py  deployer.py  exceptions.py  sessions.py  state.py  validators.py
tests/: __init__.py  test_config.py  test_validators.py
